--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>1.2.53</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
